--- a/Jquery/index.html
+++ b/Jquery/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- <link rel="stylesheet" href="./css/fontawesome.css"> -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -15,12 +16,15 @@
         </div>
         <button class="zIn">Zoom In</button>
         <button class="zOut">Zoom Out</button>
-    </div>
 
+        <input type="password" name="password" id="password">
+        <i class="eyecon fas fa-eye"></i>
+    </div>
 
     <footer>
         <!-- scripts -->
         <script src="./js/jquery.js"></script>
+        <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" data-auto-replace-svg="nest"></script>
         <script src="./js/app.js"></script>
     </footer>
 </body>
